...
  return listOf(
      SearchFilterButtons(
          onClick = {
            val cleared = clearFilters(workerProfiles)
            onProfilesUpdated(cleared)
          },
          text = "Clear",
          leadingIcon = Icons.Default.Clear),
      SearchFilterButtons(
          onClick = { onShowLocationBottomSheet() },
          text = "Location",
          leadingIcon = Icons.Default.LocationSearching,
          trailingIcon = Icons.Default.KeyboardArrowDown,
          applied = locationFilterApplied),
      SearchFilterButtons(
          onClick = { onShowServicesBottomSheet() },
          text = "Service Type",
          leadingIcon = Icons.Default.Handyman,
          trailingIcon = Icons.Default.KeyboardArrowDown,
          applied = servicesFilterApplied),
      SearchFilterButtons(
          onClick = { onShowAvailabilityBottomSheet() },
          text = "Availability",
          leadingIcon = Icons.Default.CalendarMonth,
          trailingIcon = Icons.Default.KeyboardArrowDown,
          applied = availabilityFilterApplied),
      SearchFilterButtons(
          onClick = {
            if (ratingFilterApplied) {
...
          text = "Highest Rating",
          leadingIcon = Icons.Default.WorkspacePremium,
          trailingIcon = if (ratingFilterApplied) Icons.Default.Clear else null,
          applied = ratingFilterApplied),
      SearchFilterButtons(
          onClick = { onShowPriceRangeBottomSheet() },
          text = "Price Range",
          leadingIcon = Icons.Default.MonetizationOn,
          trailingIcon = Icons.Default.KeyboardArrowDown,
          applied = priceFilterApplied),
      SearchFilterButtons(
          onClick = {
            if (emergencyFilterApplied) {
...
    screenWidth: Dp,
    screenHeight: Dp
) {

  IconButton(
      onClick = { toggleFilterButtons() },
      modifier = modifier.testTag("tuneButton"),
      colors =
          IconButtonDefaults.iconButtonColors(
              containerColor =
                  if (showFilterButtons) colorScheme.primary else colorScheme.surface)) {
        Icon(
            imageVector = Icons.Default.Tune,
...

  Spacer(modifier = Modifier.width(10.dp))

  AnimatedVisibility(visible = showFilterButtons) {
    LazyRow(
        verticalAlignment = Alignment.CenterVertically,
        modifier = Modifier.testTag("filter_buttons_row")) {
          items(listOfButtons.size) { index ->
            val button = listOfButtons[index]
            QuickFixButton(
                buttonText = button.text,
                onClickAction = button.onClick,
                buttonColor = if (button.applied) colorScheme.primary else colorScheme.surface,
...
