...
  var range0 by remember { mutableIntStateOf(0) }
  var range1 by remember { mutableIntStateOf(0) }
  if (showModalBottomSheet) {
    ModalBottomSheet(
        onDismissRequest = onDismissRequest,
        shape = RoundedCornerShape(topStart = 16.dp, topEnd = 16.dp),
        modifier = Modifier.testTag("priceRangeModalSheet")) {
          BoxWithConstraints {
            val paddingHorizontal = maxWidth * 0.04f
            val verticalSpacing = maxHeight * 0.015f
            val cornerRadius = maxWidth * 0.05f
            val buttonPaddingHorizontal = maxWidth * 0.04f

...
                              .padding(horizontal = buttonPaddingHorizontal)
                              .testTag("applyButton"),
                      colors =
                          androidx.compose.material3.ButtonDefaults.buttonColors(
                              containerColor = colorScheme.primary,
                              contentColor = colorScheme.onPrimary)) {
                        Text("Apply")
                      }

                  Text(
                      text = "Clear",
                      color =
                          if (clearEnabled) colorScheme.primary
...
